# iframe-plasma

./: .clang-tidy  .cmake-format.py  .gitignore  .pre-commit-config.yaml  .qmlformat.ini  CHANGELOG.md  CMakeLists.txt  README.md  REUSE.toml
.github/: renovate.json
.github/workflows/: ci.yml
docs/: PERFORMANCE.md
package/: metadata.json
package/contents/config/: config.qml  main.xml
package/contents/ui/: AuthSupport.qml  CollapsibleSection.qml  ConfigAdvanced.qml  ConfigAuth.qml  ConfigBackup.qml  ConfigDisplay.qml  ConfigUrls.qml  CornerFrame.qml  CropEngine.js  CyberChipDropdown.qml  CyberDropdown.qml  CyberTabBar.qml  CyberToolbar.qml  FormHintLabel.qml  GrafanaTimeRanges.qml  GrafanaUrl.js  HintPill.qml  IconPickerDialog.qml  LifecyclePolicy.js  Migrations.js  NoWheel.qml  QueryUtils.js  RowSchema.js  ScrollForwardingWheelHandler.qml  StatusOverlay.qml  Theme.qml  UnitSpinBox.qml  UrlUtils.js  WebTab.qml  WebViewLifecycle.qml  main.qml  qmldir  sanitize.js
src/: CMakeLists.txt  backupbridge.cpp  backupbridge.h  basicauthinterceptor.cpp  basicauthinterceptor.h  iwallet.h  screenlockmonitor.cpp  screenlockmonitor.h  secretsbridge.cpp  secretsbridge.h
tests/: CMakeLists.txt
tests/cpp/: CMakeLists.txt  tst_backupbridge.cpp  tst_basicauthinterceptor.cpp  tst_buildauthheader.cpp  tst_canonicalizehost.cpp  tst_screenlockmonitor.cpp  tst_secretsbridge.cpp
tests/e2e/: CMakeLists.txt  tst_auth_injection.cpp  tst_authelia_redirect.cpp  tst_cookies_persist.cpp  tst_grafana_rewrite_e2e.cpp  tst_lifecycle_e2e.cpp
tests/fixtures/: check_kcfg_coverage.py
tests/fixtures/dbusmock/: screensaver.py
tests/fixtures/fakewallet/: fakewallet.cpp  fakewallet.h
tests/fixtures/httpd/: server.py
tests/js/: CMakeLists.txt  cropengine.test.mjs  package.json
tests/qml/: CMakeLists.txt  tst_authelia_detect.qml  tst_autocycle.qml  tst_cropengine.qml  tst_grafana_url_rewrite.qml  tst_lifecycle.qml  tst_main.cpp  tst_metadata_diff.qml  tst_migrations.qml  tst_parse_safe.qml  tst_query_helpers.qml  tst_resolve_theme.qml  tst_sanitize.qml  tst_serialize_authprofiles.qml  tst_serialize_urls.qml
tests/smoke/: CMakeLists.txt
